[project]
name = "SPOT"
version = "0.1.0"
description = "Sparse Polynomial Optimization Toolbox (SPOT) — Python bindings"
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["SPOT*"]
